--- a/accounts/templates/accounts/editinfo.html
+++ b/accounts/templates/accounts/editinfo.html
@@ -1,16 +1,18 @@
 {% extends "welsh/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-	<div class="col-md-3">
-	</div>
+<div class="col-md-3"></div>
+<div class="col-md-9">
 	<div class="signin-up">
-		<form method="POST">
+		<h2>Edit info</h2>
+		<form method= "POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
-				<button class="btn btn-outline-primary" type="submit">Login</button>
+				<button class="btn btn-outline-primary" type="submit">Update</button>
 		</form>
 	</div>
+</div>
 {% endblock content %}
