--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,9 +1,12 @@
 {% extends "welsh/base.html" %}
 {% block content %}
+<div class="col-md-1"></div>
+<div class="col-md-11">
 	<h2>You have been logged out</h2>
-	<div class="border-top pt-3">
-		<small class="text-muted">
+	<div class="border-top pt-2">
+		<p class="text-muted">
 			<a href="{% url 'login' %}">Log back in?</a>
-		</small>
+		</p>
 	</div>
+</div>
 {% endblock content %}
