--- a/welsh/static/welsh/base.css
+++ b/welsh/static/welsh/base.css
@@ -11,6 +11,17 @@ ul {
   margin: 0;
 }
 
+table {
+  margin-top: 30px;
+}
+
+th {
+  width: 150px;
+}
+
+th,td {
+  padding-bottom: 10px;
+}
 
 .bg-red {
   background-color: #f22929;
@@ -22,10 +33,12 @@ ul {
 
 .site-header .navbar-nav .nav-link {
   color: #ffffff;
+  font-size: 18px;
 }
 
 .site-header .navbar-nav .nav-link:hover {
   color: #1f1f1f;
+  font-size: 18px;
 }
 
 .row {
@@ -37,5 +50,7 @@ ul {
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
+  margin-top: 20px;
   margin-bottom: 20px;
+  width: 500px;
 }
