added password reset and change features

--- a/accounts/templates/accounts/myinfo.html
+++ b/accounts/templates/accounts/myinfo.html
@@ -18,6 +18,6 @@
 		<br><br>
 
 		<a href="{% url 'editinfo' %}">Change my info</a><br>
-		<a href="#">Change password</a><br>
+		<a href="{% url 'changepassword' %}">Change my password</a>
 	</div>
 {% endblock content %}
