--- a/accounts/templates/accounts/passwordreset_confirm.html
+++ b/accounts/templates/accounts/passwordreset_confirm.html
@@ -1,16 +1,17 @@
 {% extends "welsh/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="col-md-3"></div>
+	<div class="col-md-3">
+	</div>
 	<div class="signup">
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
-                <legend class="border-bottom mb-4">Password Reset</legend>
+                <legend class="border-bottom mb-4">Confirm Password Reset</legend>
                 {{ form|crispy }}
             </fieldset>
 			<div class="form-group">
-				<button class="btn btn-outline-primary" type="submit">Reset Password</button>
+				<button class="btn btn-outline-primary" type="submit">Confirm Reset Password</button>
 		</form>
 	</div>
 {% endblock content %}
