--- a/accounts/templates/accounts/editinfo.html
+++ b/accounts/templates/accounts/editinfo.html
@@ -3,11 +3,11 @@
 {% block content %}
 <div class="col-md-3"></div>
 <div class="col-md-9">
-	<div class="signin-up">
-		<h2>Edit info</h2>
+	<div class="signup">
 		<form method= "POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
+				<legend class="border-bottom mb-4">Edit Info</legend>
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
