--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,16 +1,22 @@
 {% extends "welsh/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-	<div class="col-md-3">
+	<div class="col-md-4">
 	</div>
-	<div class="signin-up">
+	<div class="signin">
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
+				<legend class="border-bottom mb-4">Login</legend>
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
 				<button class="btn btn-outline-primary" type="submit">Login</button>
 		</form>
+		<div class="border-top">
+            <small class="text-muted">
+                Need An Account? <a class="ml-2" href="{% url 'signup' %}">Sign Up</a>
+            </small>
+        </div>
 	</div>
 {% endblock content %}
