--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -5,7 +5,7 @@
 	<h2>You have been logged out</h2>
 	<div class="border-top pt-2">
 		<p class="text-muted">
-			<a href="{% url 'login' %}">Log back in?</a>
+			<a href="{% url 'login' %}">Log back in</a>
 		</p>
 	</div>
 </div>
