--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -3,14 +3,20 @@
 {% block content %}
 	<div class="col-md-3">
 	</div>
-	<div class="signin-up">
+	<div class="signup">
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
+				<legend class="border-bottom mb-4">Sign Up</legend>
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group">
 				<button class="btn btn-outline-primary" type="submit">Register</button>
 		</form>
+		<div class="border-top">
+            <small class="text-muted">
+                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+            </small>
+        </div>
 	</div>
 {% endblock content %}
