login added to homepage + forgot password added

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -17,6 +17,10 @@
             <small class="text-muted">
                 Need An Account? <a class="ml-2" href="{% url 'signup' %}">Sign Up</a>
             </small>
+            <br>
+        	<small class="text-muted">
+          		Forgotten your password? <a class="ml-2" href="{% url 'passwordreset' %}">Reset password</a>
+       		 </small>
         </div>
 	</div>
 {% endblock content %}
