--- a/welsh/templates/welsh/base.html
+++ b/welsh/templates/welsh/base.html
@@ -16,7 +16,11 @@
 	<header class="site-header">
 	  <nav class="navbar navbar-expand-md navbar-dark bg-red">
 	    <div class="container">
-	      <a class="navbar-brand" href="">
+        {% if user.is_authenticated %}
+	      <a class="navbar-brand" href="{% url 'welcome' %}">
+        {% else %}
+        <a class="navbar-brand" href="{% url 'index' %}">
+        {% endif %}
     		<img src="{% static 'img/Logo.png' %}" class="rounded float-right" alt="iaith" width="250" height="60"/>
   	      </a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
