--- a/welsh/templates/welsh/base.html
+++ b/welsh/templates/welsh/base.html
@@ -11,13 +11,15 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'welsh/base.css' %}">
 
+    <title>Iaith</title>
 </head>
+
 <body>
 	<header class="site-header">
 	  <nav class="navbar navbar-expand-md navbar-dark bg-red">
 	    <div class="container">
         {% if user.is_authenticated %}
-	      <a class="navbar-brand" href="{% url 'welcome' %}">
+	      <a class="navbar-brand" href="{% url 'home' %}">
         {% else %}
         <a class="navbar-brand" href="{% url 'index' %}">
         {% endif %}
