Added lesson, test, game select view; redirected logout; Content added to index

--- a/welsh/templates/welsh/year7.html
+++ b/welsh/templates/welsh/year7.html
@@ -5,17 +5,17 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose a topic</h5><br>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic1">
 		<button type="button" class="btn btn-lg btn-block">Fi fy Hunan / Myself</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Gwyliau / Holidays</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic3">
 		<button type="button" class="btn btn-lg btn-block">Ysgol / School</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic4">
 		<button type="button" class="btn btn-lg btn-block">Tywydd / Weather</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Amser / Time</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic6">
 		<button type="button" class="btn btn-lg btn-block">Bwyd / Food</button></a>
 	</div>
 
