--- a/welsh/templates/welsh/year9.html
+++ b/welsh/templates/welsh/year9.html
@@ -5,15 +5,15 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose a topic</h5><br>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic1">
+		<button type="button" class="btn btn-lg btn-block">Cysyllteiriau ac Idiomau / Connectives and Idioms</button></a>
+		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Hamdden a Hobiau / Leisure and Hobbies</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic3">
 		<button type="button" class="btn btn-lg btn-block">Chwaraeon / Sports</button></a>
-		<a class="menu-btn" href="#">
-		<button type="button" class="btn btn-lg btn-block">Cadw'n Iach / Keeping Healthy</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic4">
 		<button type="button" class="btn btn-lg btn-block">Digwyddiadau Arbennig / Special Events</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Amser Gorffenol / Past Tense</button></a>
 	</div>
 
