--- a/accounts/templates/accounts/myinfo.html
+++ b/accounts/templates/accounts/myinfo.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="col-md-1"></div>
 	<div class="col-md-11">
-		<h2>My Info</h2>
+		<h2 style= "margin-top: 10px">My Info</h2>
 		<table>
 			<tr>
 				<th>Username:</th> 
