--- a/welsh/templates/welsh/index.html
+++ b/welsh/templates/welsh/index.html
@@ -10,8 +10,14 @@
 {% block content %}
 	<!-- Insert body code here-->
 	<div class="col-md-8">
-		<h1>Croeso/Welcome</h1>
-    <p style="font-size: 16px">Welcome to Iaith. More needs to be added here later.</p>
+		<h1 style= "margin-bottom: 20px">Croeso/Welcome</h1>
+    <p style= "font-size: 16px">Welcome to Iaith.</p>
+    <p style= "font-size: 16px">The word 'iaith' means 'language' in Welsh and that is exactly what we are passionate about. Iaith is a web appication that will help you to learn the Welsh language online. This application is perfect to supplement your education as our syllabus has been designed to closely resemble the curiculum that has been set for the Welsh Second Language GCSE by the WJEC examination board. We provide lessons and tests on a range of topics for learning accompanied by games for a fun method to reinforce knowledge of course content.</p>
+    {% if user.is_authenticated %}
+    <br><p style= "font-size: 16px">Click <a href= "{% url 'home' %}">here</a> to go to the homepage</p>
+    {% else %}
+    <br><p style= "font-size: 16px">Sign up today!</p>
+    {% endif %}
 	</div>
 
   {% if user.is_authenticated == False %}
