--- a/welsh/templates/welsh/year10.html
+++ b/welsh/templates/welsh/year10.html
@@ -5,15 +5,16 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose a topic</h5><br>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic1">
 		<button type="button" class="btn btn-lg btn-block">Cerddoriaeth / Music</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Cymru, Digwylliant ac Enwogion / Wales, Culture and Celebrities</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic3">
+		<button type="button" class="btn btn-lg btn-block">Cadw'n Iach / Keeping Healthy</button></a>
+		<a class="menu-btn" href="topic4">
 		<button type="button" class="btn btn-lg btn-block">Y Penwythnos / The Weekend</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Amser Dyfodol / Future Tense</button></a>
-		<!--Possibly idioms and connectives here -->
 	</div>
 
 {% endblock content %}
