--- a/welsh/templates/welsh/year11.html
+++ b/welsh/templates/welsh/year11.html
@@ -5,15 +5,15 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose a topic</h5><br>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic1">
 		<button type="button" class="btn btn-lg btn-block">Gwaith / Work</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Problemau Pobl Ifanc / Young People's Problems</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic3">
 		<button type="button" class="btn btn-lg btn-block">Y Amgylchedd / The Environment</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic4">
 		<button type="button" class="btn btn-lg btn-block">Cyfryngau / Media</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Technoleg / Technology</button></a>
 	</div>
 
