--- a/welsh/templates/welsh/year8.html
+++ b/welsh/templates/welsh/year8.html
@@ -5,15 +5,15 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose a topic</h5><br>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic1">
 		<button type="button" class="btn btn-lg btn-block">Ffasiwn / Fashion</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Teulu a Ffrindiau / Family and Friends</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic3">
 		<button type="button" class="btn btn-lg btn-block">Trefn Ddyddiol / Daily Routine</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic4">
 		<button type="button" class="btn btn-lg btn-block">Anifeiliad Anwes / Pets</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Cartref / Home</button></a>
 	</div>
 
