--- a/welsh/templates/welsh/select.html
+++ b/welsh/templates/welsh/select.html
@@ -7,7 +7,7 @@
 		<br><h5>Please choose an activity</h5><br>
 		<a class="menu-btn" href="#">
 		<button type="button" class="btn btn-lg btn-block">Gwersi / Lessons</button></a>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="test/">
 		<button type="button" class="btn btn-lg btn-block">Profion / Tests</button></a>
 		<a class="menu-btn" href="#">
 		<button type="button" class="btn btn-lg btn-block">Gemau / Games</button></a>
