anagrams functionality added

--- a/welsh/templates/welsh/result.html
+++ b/welsh/templates/welsh/result.html
@@ -12,9 +12,9 @@
 				<p>You entered <strong>{{ form.answer_1.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.0 }}</strong></p>
 				{% if form.answer_1.value == answer_values.0 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 			<td>
@@ -22,9 +22,9 @@
 				<p>You entered <strong>{{ form.answer_2.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.1 }}</strong></p>
 				{% if form.answer_2.value == answer_values.1 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 		</tr>
@@ -34,9 +34,9 @@
 				<p>You entered <strong>{{ form.answer_3.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.2 }}</strong></p>
 				{% if form.answer_3.value == answer_values.2 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 			<td>
@@ -44,9 +44,9 @@
 				<p>You entered <strong>{{ form.answer_4.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.3 }}</strong></p>
 				{% if form.answer_4.value == answer_values.3 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 		</tr>
@@ -56,9 +56,9 @@
 				<p>You entered <strong>{{ form.answer_5.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.4 }}</strong></p>
 				{% if form.answer_5.value == answer_values.4 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 			<td>
@@ -66,9 +66,9 @@
 				<p>You entered <strong>{{ form.answer_6.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.5 }}</strong></p>
 				{% if form.answer_6.value == answer_values.5 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 		</tr>
@@ -78,9 +78,9 @@
 				<p>You entered <strong>{{ form.answer_7.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.6 }}</strong></p>
 				{% if form.answer_7.value == answer_values.6 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 			<td>
@@ -88,9 +88,9 @@
 				<p>You entered <strong>{{ form.answer_8.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.7 }}</strong></p>
 				{% if form.answer_8.value == answer_values.7 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 		</tr>
@@ -100,9 +100,9 @@
 				<p>You entered <strong>{{ form.answer_9.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.8 }}</strong></p>
 				{% if form.answer_9.value == answer_values.8 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 			<td>
@@ -110,9 +110,9 @@
 				<p>You entered <strong>{{ form.answer_10.value }}</strong></p>
 				<p>The correct answer is <strong>{{ answer_values.9 }}</strong></p>
 				{% if form.answer_10.value == answer_values.9 %}
-				<p>Well done! You got it right!</p>
+				<p>Correct.</p>
 				{% else %}
-				<p>You didn't quite get it right! Unlucky!</p>
+				<p>Incorrect.</p>
 				{% endif %}
 			</td>
 		</tr>
@@ -122,5 +122,5 @@
 			<button style= "margin-right: 600px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
 			<a href= "/{{ urlpath }}/test/">
 			<button class="btn btn-outline-primary" type="submit">Try again?</button></a>
-		</div>
+	</div>
 {% endblock content %}
