--- a/welsh/templates/welsh/select.html
+++ b/welsh/templates/welsh/select.html
@@ -8,8 +8,8 @@
 		<a class="menu-btn" href="#">
 		<button type="button" class="btn btn-lg btn-block">Gwersi / Lessons</button></a>
 		<a class="menu-btn" href="test/">
-		<button type="button" class="btn btn-lg btn-block">Profion / Tests</button></a>
-		<a class="menu-btn" href="#">
+		<button type="button" class="btn btn-lg btn-block">Prawf / Test</button></a>
+		<a class="menu-btn" href="{% url 'anagram' %}">
 		<button type="button" class="btn btn-lg btn-block">Gemau / Games</button></a>
 	</div>
 
