added quickfire functionality

--- a/games/templates/games/quickfire.html
+++ b/games/templates/games/quickfire.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 	<div style= "margin-left: auto; margin-right: auto; text-align: center">
-		<h5 style= "margin-top: 10px">Unscramble the letters to get the phrase</h5>
-		<h1 style= "margin-top: 80px; font-size: 60px">{{ result }}</h1>
+		<h5 style= "margin-top: 10px">Translate as quick as possible for the best score!</h5>
+		<h1 style= "margin-top: 80px; font-size: 60px">{{ word }}</h1>
 
 		<form action= '/{{ urlpath }}/game/anagram_result/' method= "POST">
 			{% csrf_token %}
