--- a/games/templates/games/hangman.html
+++ b/games/templates/games/hangman.html
@@ -1,71 +1,81 @@
 {% extends "welsh/base.html" %}
 
 {% block content %}
-{% if game.display %}
-
-    <h1 id="display"> {{ game.display }}</h1>
-
-{% endif %}
-
-<form action="#" id="letters" method="POST">
-    {% csrf_token %}
+<div style= "margin-left: auto; margin-right: auto; text-align: center">
+    <h5 style= "margin-top: 10px">Guess the correct letters to make up the word</h5>
+    <h5 style= "margin-top: 20px">Lives remaining: {{ num_lives }}</h5>
+    {% if game.display %}
+        <h1 id="display" style="margin-top: 40px"> {{ game.display }}</h1>
+    {% endif %}
+    {% if game.status == 'ongoing' %}
     <div>
-        <input type="hidden" name="game_id" value="{{ game.game_id }}"/>
-        <button class="btn btn-default" type="submit" name="letter" value="a">a</button>
-        <button class="btn btn-default" type="submit" name="letter" value="b">b</button>
-        <button class="btn btn-default" type="submit" name="letter" value="c">c</button>
-        <button class="btn btn-default" type="submit" name="letter" value="d">d</button>
-        <button class="btn btn-default" type="submit" name="letter" value="e">e</button>
-        <button class="btn btn-default" type="submit" name="letter" value="f">f</button>
-        <button class="btn btn-default" type="submit" name="letter" value="g">g</button>
-        <button class="btn btn-default" type="submit" name="letter" value="h">h</button>
-        <button class="btn btn-default" type="submit" name="letter" value="i">i</button>
-        <button class="btn btn-default" type="submit" name="letter" value="j">j</button>
-        <button class="btn btn-default" type="submit" name="letter" value="k">k</button>
-        <button class="btn btn-default" type="submit" name="letter" value="l">l</button>
-        <button class="btn btn-default" type="submit" name="letter" value="m">m</button>
+        <form action="#" id="letters" method="POST">
+            {% csrf_token %}
+            <div style="margin-top: 40px">
+                <input type="hidden" name="game_id" value="{{ game.game_id }}"/>
+                <button class="btn btn-default" type="submit" name="letter" value="a">a</button>
+                <button class="btn btn-default" type="submit" name="letter" value="b">b</button>
+                <button class="btn btn-default" type="submit" name="letter" value="c">c</button>
+                <button class="btn btn-default" type="submit" name="letter" value="d">d</button>
+                <button class="btn btn-default" type="submit" name="letter" value="e">e</button>
+                <button class="btn btn-default" type="submit" name="letter" value="f">f</button>
+                <button class="btn btn-default" type="submit" name="letter" value="g">g</button>
+                <button class="btn btn-default" type="submit" name="letter" value="h">h</button>
+                <button class="btn btn-default" type="submit" name="letter" value="i">i</button>
+                <button class="btn btn-default" type="submit" name="letter" value="j">j</button>
+                <button class="btn btn-default" type="submit" name="letter" value="k">k</button>
+                <button class="btn btn-default" type="submit" name="letter" value="l">l</button>
+                <button class="btn btn-default" type="submit" name="letter" value="m">m</button>
+            </div>
+            <br>
+            <div>
+                <button class="btn btn-default" type="submit" name="letter" value="n">n</button>
+                <button class="btn btn-default" type="submit" name="letter" value="o">o</button>
+                <button class="btn btn-default" type="submit" name="letter" value="p">p</button>
+                <button class="btn btn-default" type="submit" name="letter" value="q">q</button>
+                <button class="btn btn-default" type="submit" name="letter" value="r">r</button>
+                <button class="btn btn-default" type="submit" name="letter" value="s">s</button>
+                <button class="btn btn-default" type="submit" name="letter" value="t">t</button>
+                <button class="btn btn-default" type="submit" name="letter" value="u">u</button>
+                <button class="btn btn-default" type="submit" name="letter" value="v">v</button>
+                <button class="btn btn-default" type="submit" name="letter" value="w">w</button>
+                <button class="btn btn-default" type="submit" name="letter" value="x">x</button>
+                <button class="btn btn-default" type="submit" name="letter" value="y">y</button>
+                <button class="btn btn-default" type="submit" name="letter" value="z">z</button>
+            </div>
+        </form>
     </div>
-    <br>
-    <div>
-        <button class="btn btn-default" type="submit" name="letter" value="n">n</button>
-        <button class="btn btn-default" type="submit" name="letter" value="o">o</button>
-        <button class="btn btn-default" type="submit" name="letter" value="p">p</button>
-        <button class="btn btn-default" type="submit" name="letter" value="q">q</button>
-        <button class="btn btn-default" type="submit" name="letter" value="r">r</button>
-        <button class="btn btn-default" type="submit" name="letter" value="s">s</button>
-        <button class="btn btn-default" type="submit" name="letter" value="t">t</button>
-        <button class="btn btn-default" type="submit" name="letter" value="u">u</button>
-        <button class="btn btn-default" type="submit" name="letter" value="v">v</button>
-        <button class="btn btn-default" type="submit" name="letter" value="w">w</button>
-        <button class="btn btn-default" type="submit" name="letter" value="x">x</button>
-        <button class="btn btn-default" type="submit" name="letter" value="y">y</button>
-        <button class="btn btn-default" type="submit" name="letter" value="z">z</button>
-    </div>
-</form>
-
 <br>
-<div id="guessed">
-    <h style="font-size: 2em"> Guessed letter:</h>
-    {% for letter in guessed %}
-        <button class="btn btn-primary">{{ letter }}</button>
-    {% endfor %}
-
+<div style= "margin-top: 20px">
+    <h3> Guessed letters: {{ guessed }} </h3>
+</div>
+<div style="margin-top: 40px;" class="form-group">
+    <a href= "/{{ urlpath }}/">
+    <button style="margin-left: 20px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
 </div>
 <br>
-{% if game.status == 'win' %}
-    <div class="col-md-3"></div>
-    <div class="alert alert-success col-md-6" id="result">
-        <strong>You win!</strong> The answer is <strong>"{{ game.answer }}"</strong>.
-    </div>
-    <div class="col-md-3"></div>
-
-{% elif game.status == 'lose' %}
-    <div class="col-md-3"></div>
-    <div class="alert alert-danger col-md-6" id="result">
-        <strong>You lose!</strong> The answer is <strong>"{{ game.answer }}"</strong>.
-    </div>
-    <div class="col-md-3"></div>
-
+{% elif game.status == 'win' %}
+<div style= "margin-top: 60px">
+    <h3>You win! The answer is "{{ game.answer }}".</h3><br>
+    <h3>Swydd dda! Well done!</h3>
+</div>
+<div style="margin-top: 40px;" class="form-group">
+    <a href= "/{{ urlpath }}/game/anagram/">
+    <button class="btn btn-outline-primary" type="submit">Try Another</button></a>
+    <a href= "/{{ urlpath }}/">
+    <button style="margin-left: 20px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
+</div>
+{% else %}
+<div style= "margin-top: 60px">
+    <h3>You lose! The answer is "{{ game.answer }}".</h3><br>
+    <h3>Unlucky! Better luck next time!</h3>
+</div>
+<div style="margin-top: 40px;" class="form-group">
+    <a href= "/{{ urlpath }}/game/anagram/">
+    <button class="btn btn-outline-primary" type="submit">Try Another</button></a>
+    <a href= "/{{ urlpath }}/">
+    <button style="margin-left: 20px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
+</div>
 {% endif %}
 
 {% endblock content %}
