--- a/welsh/templates/welsh/select.html
+++ b/welsh/templates/welsh/select.html
@@ -9,7 +9,7 @@
 		<button type="button" class="btn btn-lg btn-block">Gwersi / Lessons</button></a>
 		<a class="menu-btn" href="test/">
 		<button type="button" class="btn btn-lg btn-block">Prawf / Test</button></a>
-		<a class="menu-btn" href="{% url 'anagram' %}">
+		<a class="menu-btn" href="games/">
 		<button type="button" class="btn btn-lg btn-block">Gemau / Games</button></a>
 	</div>
 
