--- a/welsh/templates/welsh/select.html
+++ b/welsh/templates/welsh/select.html
@@ -5,7 +5,7 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose an activity</h5><br>
-		<a class="menu-btn" href="#">
+		<a class="menu-btn" href="lesson/1/">
 		<button type="button" class="btn btn-lg btn-block">Gwersi / Lessons</button></a>
 		<a class="menu-btn" href="test/">
 		<button type="button" class="btn btn-lg btn-block">Prawf / Test</button></a>
