--- a/welsh/templates/welsh/year9.html
+++ b/welsh/templates/welsh/year9.html
@@ -6,7 +6,7 @@
 	<div class="col-md-10">
 		<br><h5>Please choose a topic</h5><br>
 		<a class="menu-btn" href="topic1">
-		<button type="button" class="btn btn-lg btn-block">Cysyllteiriau ac Idiomau / Connectives and Idioms</button></a>
+		<button type="button" class="btn btn-lg btn-block">Ardal / Area</button></a>
 		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Hamdden a Hobiau / Leisure and Hobbies</button></a>
 		<a class="menu-btn" href="topic3">
