--- a/games/templates/games/quickfire_result.html
+++ b/games/templates/games/quickfire_result.html
@@ -17,7 +17,7 @@
 		{% endif %}
 
 		<div style="margin-top: 40px;" class="form-group">
-			<a href= "/{{ urlpath }}/game/anagram/">
+			<a href= "/{{ urlpath }}/games/quickfire/">
 			<button class="btn btn-outline-primary" type="submit">Try Another</button></a>
 			<a href= "/{{ urlpath }}/">
 			<button style="margin-left: 20px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
