--- a/welsh/templates/welsh/select.html
+++ b/welsh/templates/welsh/select.html
@@ -5,12 +5,14 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 		<br><h5>Please choose an activity</h5><br>
-		<a class="menu-btn" href="lesson/1/">
+		<a class="menu-btn" href="lesson/">
 		<button type="button" class="btn btn-lg btn-block">Gwersi / Lessons</button></a>
 		<a class="menu-btn" href="test/">
 		<button type="button" class="btn btn-lg btn-block">Prawf / Test</button></a>
 		<a class="menu-btn" href="games/">
 		<button type="button" class="btn btn-lg btn-block">Gemau / Games</button></a>
+		<a class="menu-btn" href="/{{ urlpath }}/">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
