--- a/games/templates/games/game_select.html
+++ b/games/templates/games/game_select.html
@@ -11,6 +11,8 @@
 		<button type="button" class="btn btn-lg btn-block">Hangman</button></a>
 		<a class="menu-btn" href="quickfire/">
 		<button type="button" class="btn btn-lg btn-block">Quickfire</button></a>
+		<a class="menu-btn" href="/{{ urlpath }}/">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
