--- a/welsh/templates/welsh/lesson.html
+++ b/welsh/templates/welsh/lesson.html
@@ -2,34 +2,49 @@
 
 {% block content %}
 	<!-- Insert body code here-->
-	<div class="col-md-1"></div>
-	<div class="col-md-7">
+	<div class="col-md-8" style="text-align: center">
 		{% if lesson.status == 'learning' %}
-			<form method="POST">
-			<input type="hidden" name="lesson_id" value="{{ lesson.lesson_id }}"/>
-			{% csrf_token %}
-			<h3>{{ lesson.current_phrase }}</h3><br>
-			<h3>{{ lesson.current_translated_phrase }}</h3>
-			<button type="submit" name="nextbtn" value="nextbtn">Next</button>
-			</form>
+			<div class="lesson">
+				<form method="POST">
+				<input type="hidden" name="lesson_id" value="{{ lesson.lesson_id }}"/>
+				{% csrf_token %}
+				<h5 style="margin-top: 40px">Cymraeg:</h5><br>
+				<h2>{{ lesson.current_phrase }}</h2><br><br>
+				<h5>English:</h5><br>
+				<h2>{{ lesson.current_translated_phrase }}</h2>
+				<div style="margin-top: 60px;" class="form-group">
+					<a href= "/{{ urlpath }}/">
+		    		<button style="margin-right: 10px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
+					<button type="submit" class="btn btn-outline-primary" name="nextbtn" value="nextbtn">Next</button>
+				</div>
+				</form>
+			</div>
 
 		{% elif lesson.status == 'input' %}
-			<h3 id="commit">Commit the phrase to memory and press button when ready</h3><br>
-			<button onclick="PhraseAppear()" id="button">Try it</button>
-			<h3 id="help" style="display: none">Translate the sentence into Welsh</h3><br>
-			<h3 id="translation" style="display: none">{{ lesson.current_translated_phrase }}</h3><br>
-			<form method= "POST">
-			<input type="hidden" name="lesson_id" value="{{ lesson.lesson_id }}"/>
-			{% csrf_token %}
-				<input id="guess" style="display: none" type="text" name="guess" size="30"><br>
-				<button id="submit" class="btn btn-outline-primary" type="submit" style="display: none" value="True">Submit</button>
-			</form>
+			<div class="lesson">
+				<h5 id="commit" style="margin-top: 40px">Commit the phrase to memory and</h5>
+				<h5 id= "commit1">press the button when ready</h5><br>
+				<button style="margin-top: 60px" class="btn btn-outline-primary" type="button" onclick="PhraseAppear()" id="button">Ready</button>
+				<h5 id="help" style="display: none; margin-top: 60px">Translate the sentence into Welsh</h5><br><br><br>
+				<h2 id="translation" style="display: none; margin-top: 60px">{{ lesson.current_translated_phrase }}</h2><br>
+				<form method= "POST">
+				<input type="hidden" name="lesson_id" value="{{ lesson.lesson_id }}"/>
+				{% csrf_token %}
+					<input id="guess" style="display: none; margin-top: 60px" type="text" name="guess" size="30"><br>
+					<div style="margin-top: 60px;" class="form-group">
+						<a href= "/{{ urlpath }}/">
+			    		<button style="margin-right: 10px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
+						<button id="submit" class="btn btn-outline-primary" type="submit" style="display: none" value="True">Submit</button>
+					</div>
+				</form>
+			</div>
 
 			<script>
 				function PhraseAppear() {
 					document.getElementById("help").style.display = "inline";
 					document.getElementById("translation").style.display = "inline";
 					document.getElementById("commit").style.display = "none";
+					document.getElementById("commit1").style.display = "none";
 					document.getElementById('button').style.display = 'none';
 					document.getElementById('submit').style.display = 'inline';
 					document.getElementById('guess').style.display = 'inline';
@@ -37,25 +52,48 @@
 			</script>
 
 		{% elif lesson.status == 'check' %}
-			{% if form.guess.value == lesson.current_phrase %}
-				<h2>Well done! That was correct!</h2>
-			{% else %}
-				<h2>You didn't quite get it right! Unlucky!</h2><br>
-				<h2>The correct answer was: {{ lesson.current_phrase }}</h2>
-			{% endif %}
-			<form method= "POST">
-			<input type="hidden" name="lesson_id" value="{{ lesson.lesson_id }}"/>
-			<input type="hidden" name="next_phrase" value="True"/>
-			{% csrf_token %}
-			<button class="btn btn-outline-primary" type="submit" value="next_phrase">Next Phrase</button>
-			</form>
+			<div style="margin-top: 60px" class="lesson">
+				{% if form.guess.value == lesson.current_phrase %}
+					<h4>Well done! That was correct!</h4>
+				{% else %}
+					<h4>You didn't quite get it right! Unlucky!</h4><br>
+					<h4>The correct answer was: </h4><br><br>
+					<h2>{{ lesson.current_phrase }}</h2>
+				{% endif %}
+				<form method= "POST">
+				<input type="hidden" name="lesson_id" value="{{ lesson.lesson_id }}"/>
+				<input type="hidden" name="next_phrase" value="True"/>
+				{% csrf_token %}
+				<div style="margin-top: 60px;" class="form-group">
+					<a href= "/{{ urlpath }}/">
+			    	<button style="margin-right: 10px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
+					<button class="btn btn-outline-primary" type="submit" value="next_phrase">Next Phrase</button>
+				</div>
+				</form>
+			</div>
 		{% elif lesson.status == 'finished' %}
-			<h3>Test</h3>
+			<div style="margin-top: 60px" class="lesson">
+				<h4>You have completed this lesson.</h4><br>
+				<h5>Why not try a test or play some games?</h5>
+				<div style="margin-top: 60px;" class="form-group">
+				    <a href= "/{{ urlpath }}/">
+				    <button style="margin-right: 10px" class="btn btn-outline-primary" type="button">Return to Menu</button></a>
+				</div>
+			</div>
 		{% endif %}
 	</div>
 
 	<div class="col-md-4">
 		<!--Mutations help-->
+		<h3>Help</h3>
+		<h6>In Welsh, letters can change at the beginning of the word depending on the word that precedes it. These are called mutations. Example: The soft mutation for the word 'potel' (English translation: 'bottle') is 'botel'.</h6>
+		<h6>Mutations do not occur all of the time but you need to be aware that they can appear. These mutations are:</h6>
+		<h6 style= "margin-top: 15px">Soft Mutations:</h6>
+		<p>p > b, &nbsp; t > d, &nbsp; c > g, &nbsp; b > f, &nbsp; d > dd,  g > (omit letter), &nbsp; m > f, &nbsp; ll > l, &nbsp; rh > r</p>
+		<h6 style= "margin-top: 10px">Nasal Mutations:</h6>
+		<p>p > mh, &nbsp; t > nh, &nbsp; c > ngh, &nbsp; b > m, &nbsp; d > n, &nbsp; g > ng</p>
+		<h6 style= "margin-top: 10px">Aspirate Mutations:</h6>
+		<p>p > ph, &nbsp; t > th, &nbsp; c > ch</p><br>
 	</div>
 
 {% endblock content %}
