--- a/welsh/templates/welsh/year10.html
+++ b/welsh/templates/welsh/year10.html
@@ -15,6 +15,8 @@
 		<button type="button" class="btn btn-lg btn-block">Y Penwythnos / The Weekend</button></a>
 		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Amser Dyfodol / Future Tense</button></a>
+		<a class="menu-btn" href="{% url 'home' %}">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
