--- a/welsh/templates/welsh/year11.html
+++ b/welsh/templates/welsh/year11.html
@@ -15,6 +15,8 @@
 		<button type="button" class="btn btn-lg btn-block">Cyfryngau / Media</button></a>
 		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Technoleg / Technology</button></a>
+		<a class="menu-btn" href="{% url 'home' %}">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
