--- a/welsh/templates/welsh/year7.html
+++ b/welsh/templates/welsh/year7.html
@@ -17,6 +17,8 @@
 		<button type="button" class="btn btn-lg btn-block">Amser / Time</button></a>
 		<a class="menu-btn" href="topic6">
 		<button type="button" class="btn btn-lg btn-block">Bwyd / Food</button></a>
+		<a class="menu-btn" href="{% url 'home' %}">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
