--- a/welsh/templates/welsh/year8.html
+++ b/welsh/templates/welsh/year8.html
@@ -15,6 +15,8 @@
 		<button type="button" class="btn btn-lg btn-block">Anifeiliad Anwes / Pets</button></a>
 		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Cartref / Home</button></a>
+		<a class="menu-btn" href="{% url 'home' %}">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
