--- a/welsh/templates/welsh/year9.html
+++ b/welsh/templates/welsh/year9.html
@@ -15,6 +15,8 @@
 		<button type="button" class="btn btn-lg btn-block">Digwyddiadau Arbennig / Special Events</button></a>
 		<a class="menu-btn" href="topic5">
 		<button type="button" class="btn btn-lg btn-block">Amser Gorffenol / Past Tense</button></a>
+		<a class="menu-btn" href="{% url 'home' %}">
+		<button type="button" class="btn btn-lg btn-block">Back</button></a>
 	</div>
 
 {% endblock content %}
