--- a/welsh/templates/welsh/year11.html
+++ b/welsh/templates/welsh/year11.html
@@ -10,7 +10,7 @@
 		<a class="menu-btn" href="topic2">
 		<button type="button" class="btn btn-lg btn-block">Problemau Pobl Ifanc / Young People's Problems</button></a>
 		<a class="menu-btn" href="topic3">
-		<button type="button" class="btn btn-lg btn-block">Y Amgylchedd / The Environment</button></a>
+		<button type="button" class="btn btn-lg btn-block">Yr Amgylchedd / The Environment</button></a>
 		<a class="menu-btn" href="topic4">
 		<button type="button" class="btn btn-lg btn-block">Cyfryngau / Media</button></a>
 		<a class="menu-btn" href="topic5">
