small template change

--- a/welsh/templates/welsh/test.html
+++ b/welsh/templates/welsh/test.html
@@ -4,7 +4,7 @@
 	<!-- Insert body code here-->
 	<div class="col-md-1"></div>
 	<div class="col-md-11">
-		<h5 style= "margin-top: 10px">Complete as many questions as you can:</h5>
+		<h5 style= "margin-top: 10px">Translate as many of the phrases as you possibly can:</h5>
 		{% for test in tests %}
 		<form action= 'result/' method= "POST">
 			{% csrf_token %}
